--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -t 500 -b --exit",
+    "test-cov": "nyc mocha -t 500 -b",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -22,7 +23,8 @@
     "lodash": "^4.17.15",
     "mongodb": "^3.3.0-beta2",
     "namshi-node-mysql": "^2.1.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "proxyquire": "^2.1.3"
   },
   "devDependencies": {
     "husky": "^3.0.3",
