--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "expressjs-utils": "^3.1.3",
+    "helm": "^0.2.1",
     "joi": "^14.3.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.0-beta2",
@@ -27,6 +28,7 @@
     "proxyquire": "^2.1.3"
   },
   "devDependencies": {
+    "helmet": "^3.20.0",
     "husky": "^3.0.3",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
