--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/client_form:${BRANCH_NAME}', "."]
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/client-form:${BRANCH_NAME}', "."]
 
   - name: gcr.io/cloud-builders/git
     args: ['fetch', '--unshallow']
 
-images: ["gcr.io/$PROJECT_ID/client_form"]
+images: gcr.io/$PROJECT_ID/client-form
