--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,3 +4,6 @@ steps:
 
   - name: 'gcr.io/cloud-builders/docker'
     args: ["push", "gcr.io/$PROJECT_ID/client_form"]
+
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['beta', 'run', 'deploy', 'client_form', '--image', 'gcr.io/$PROJECT_ID/client_form:${SHORT_SHA}', '--region', 'us-central1']
