--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,4 +6,7 @@ steps:
     args: ["push", "gcr.io/$PROJECT_ID/client_form"]
 
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['beta', 'run', 'deploy', 'client_form', '--image', 'gcr.io/$PROJECT_ID/client_form:${SHORT_SHA}', '--region', 'us-central1']
+    args: ['beta', 'run', 'deploy', 'client_form', '--image', 'gcr.io/$PROJECT_ID/client_form', '--region', 'us-central1', '--platform', 'managed']
+
+images:
+    - gcr.io/$PROJECT_ID/client_form
